Fixed problem where navigation buttons were not appearing properly on mobile screens

--- a/static/bechdel.css
+++ b/static/bechdel.css
@@ -25,6 +25,8 @@
     background-color: #5bc0de;
     color: #fff;
     font-weight: bold;
+    overflow: hidden;
+    height: 1%;
 }
 
 #misc_ribbon {
@@ -43,6 +45,7 @@
 
 #search_button {
     width: 10%;
+    min-width: 80px;
     display: inline-block;
     margin-top: 100px;
     color: #fff;
